--- a/index.html
+++ b/index.html
@@ -26,11 +26,12 @@
     <div class="container">
       <img src="https://avatars.githubusercontent.com/u/103459489?v=4" alt="Minha foto">
       <div>
-        <h1>Olá, sou Matheus Fontenele!</h1>
+        <span class="name"><h1>Matheus</h1><h1>Fontenele</h1></span>
+        <h3>Back End Developer</h3>
         <p> Estudante de Análise e Desenvolvimento de Sistemas com foco em desenvolvimento Java, movido pela curiosidade e pela vontade de transformar ideias em soluções reais<br> Atualmente mergulhado no ecossistema Java — explorando desde a base com orientação a objetos até frameworks modernos como Spring Boot.<br>
             Buscando minha primeira oportunidade na área para aplicar na prática tudo o que venho aprendendo, contribuir com projetos reais e crescer ao lado de pessoas incríveis.<br>
             Em constante evolução — cada linha de código é um passo rumo ao desenvolvedor que quero ser.</p>
-        <div class="skills">
+          <h2>SKILLS</h2>
           <div class="skills">
             <div class="skill-item">
               <i class="devicon-java-plain colored"></i>
