--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
         <li><a href="#projetos">Projetos</a></li>
         <li><a href="#contato">Contato</a></li>
       </ul>
+      <a class="curriculo" href="https://drive.google.com/file/d/1aUV1XPxUnJYoazt74px9YUG3jUaPdBxV/view?usp=sharing" target="_blank">
+        <i class="bi bi-box-arrow-down-right"></i>
+        <span>Currículo</span>
+      </a>      
     </nav>
   </header>
 
